hard-gists/6a9e5ef2921c0214eeeb/run.log
=== Docker Run Log for 6a9e5ef2921c0214eeeb ===
Started at: Mi 29. Okt 16:47:31 CET 2025

[2025-10-29 16:47:32] START: Running container for 6a9e5ef2921c0214eeeb
[2025-10-29 16:47:32] SUCCESS: Container e8e8d4771ca6caa58db3e749595855f32610dbc84fadd751bc343d595a29ee8c started for 6a9e5ef2921c0214eeeb
=== Container logs for 6a9e5ef2921c0214eeeb ===
  File "/snippet.py", line 46
    print "No data directory to save data to. Try:"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6a9e5ef2921c0214eeeb ===
[2025-10-29 16:47:34] INFO: Container e8e8d4771ca6caa58db3e749595855f32610dbc84fadd751bc343d595a29ee8c has stopped
